# PuffinTextEditor

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
libs/Engine/: Application.cpp  Application.h  CMakeLists.txt  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
libs/Engine/Events/: Events.h  KeyboardEvents.h  MouseEvents.h  WindowEvents.h
libs/Engine/TextRendering/: Font.cpp  Font.h  FontRenderer.cpp  FontRenderer.h
src/Editor/: CMakeLists.txt  Cursor.cpp  Cursor.h  Editor.cpp  Editor.h  Textbox.cpp  Textbox.h  main.cpp
src/Editor/shaders/: quad.frag  quad.vert  text.frag
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Layer.cpp  Layer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Window.cpp  Window.h
src/Engine/Events/: Events.h  MouseEvents.h  WindowEvents.h
